# toy-engine

./: Cargo.toml  README.md
inputs/: big_number.csv  example_no_whitespace.csv  example_no_zeroes.csv  example_trailing_comma.csv  example_whitespace.csv  wrong_header.csv
outputs/: big_number.csv  example.csv
src/: config.rs  engine.rs  error.rs  lib.rs  transaction.rs
tests/: operations.rs  serde.rs
