[package]
name = "toy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
rust_decimal = "1.35.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
derive_more = { version = "=1.0.0-beta.6", features = ["constructor"]}

[dev-dependencies]
tempfile = "3.10.1"
